# blog

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-migration-guide.md  site.toml
.github/workflows/: pages.yml
assets/: style.css
posts/: 001-为什么决定写博客.typ  002-博客的搭建及后续管理.typ
scripts/: build.py
src/: lib.rs  main.rs
